--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,11 @@
         </div>
 
     </div>
+    <!-- <script id="show-stats-template" type="text/x-handlebars-template">
+        <div class="day-{{day number}}"> day 1 + success icon</div>
+    </script> -->
+    <script src="jquery/dist/jquery.js"></script>
+    <script src="handlebars/dist/handlebars.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
