--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,8 @@
     <div class="container">
         <header class="header">
             <h1>12 min challenge</h1>
-            <button class="challenge yoga">Yoga challenge</button>
-            <!-- <button class="challenge other"></button> -->
+            <button class="challenge" data-type="yoga">Yoga challenge</button>
+            <button class="challenge" data-type="pilates">pilates challenge</button>
         </header>
         <div class="main-container">
             <div class="challenge-name">
