--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>12 Min Challenge</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 </head>
@@ -35,7 +35,7 @@
         <div class="day-{{day number}}"> day 1 + success icon</div>
     </script> -->
     <script src="jquery/dist/jquery.js"></script>
-    <script src="handlebars/dist/handlebars.js"></script>
-    <script src="main.js"></script>
+    <!-- <script src="handlebars/dist/handlebars.js"></script> -->
+    <script src="main.js" type="module"></script>
 </body>
 </html>
