event handler add user

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,9 @@
     <div class="container">
         <header class="header">
             <h1>12 min challenge</h1>
+            <input type="text" class="add-user" placeholder="Enter your name"/>
+            <button class="submit-user-name">Submit</button>
+            <br/>
             <button class="challenge" data-type="yoga">Yoga challenge</button>
             <button class="challenge" data-type="pilates">pilates challenge</button>
         </header>
@@ -18,6 +21,7 @@
             <div class="challenge-name">
                 <h3>challenge name</h3>
             </div>
+           
             <div class="video-container">
                 video
                 <!-- this is where we place our video -->
