api problem solved

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
 <body>
     <div class="container">
         <header class="header">
+            <div class="i"></div>
             <h1>12 min challenge</h1>
             <input type="text" class="add-user" placeholder="Enter your name"/>
             <button class="submit-user-name">Submit</button>
@@ -35,15 +36,11 @@
         </div>
 
     </div>
-    <!-- <script id="show-stats-template" type="text/x-handlebars-template">
+    <script class="addUser" type="text/x-handlebars-template">
         <div class="day-{{day number}}"> day 1 + success icon</div>
-    </script> -->
+    </script>
     <script src="jquery/dist/jquery.js"></script>
-<<<<<<< HEAD
-=======
-
->>>>>>> 0ad663d5c2c775805d5bec002f6e9eba7c82ba27
-    <!-- <script src="handlebars/dist/handlebars.js"></script> -->
+    <script src="handlebars/dist/handlebars.js"></script>
     <script src="main.js" type="module"></script>
 </body>
 </html>
