--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,13 @@
 <body>
     <div class="container">
         <header class="header">
+            <div class="i"></div>
             <h1>12 min challenge</h1>
             <input type="text" class="add-user" placeholder="Enter your name"/>
-            <button class="submit-user-name">Submit</button>
+            <button type="submit" class="submit-user-name">Submit</button>
             <br/>
-            <button class="challenge" data-type="yoga">Yoga challenge</button>
-            <button class="challenge" data-type="pilates">pilates challenge</button>
+            <button type="button" class="challenge-yoga" data-type="yoga">Yoga challenge</button>
+            <button type="button" class="challenge-pilates" data-type="pilates">pilates challenge</button>
         </header>
         <div class="main-container">
             <div class="challenge-name">
@@ -31,16 +32,13 @@
             <div class="show-stats">
                 this is where your stats are
             </div>
-
         </div>
-
     </div>
-    <!-- <script id="show-stats-template" type="text/x-handlebars-template">
-        <div class="day-{{day number}}"> day 1 + success icon</div>
-    </script> -->
+    <script class="user-template" type="text/x-handlebars-template">
+        <div><h5 data-name="{{userName}}">Hello {{userName}}</h5></div>
+    </script>
     <script src="jquery/dist/jquery.js"></script>
-
-    <!-- <script src="handlebars/dist/handlebars.js"></script> -->
+    <script src="handlebars/dist/handlebars.js"></script>
     <script src="main.js" type="module"></script>
 </body>
 </html>
