--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
             <div class="challenge-name"></div>
            
             <div class="video-container">
+                <div id="player"></div>
                 <!-- this is where we place our video -->
             </div>
         </div>
@@ -51,6 +52,7 @@
         <button class="image-btn" type="button" data-id="{{videoId2}}"><img src="{{image2}}" alt="10 minutes video" class="image-btn"></button>
         <button class="image-btn" type="button" data-id="{{videoId3}}"><img src="{{image3}}" alt="10 minutes video" class="image-btn"></button>
         <br/>
+        <div id="player"></div>
         <button class="finish-challenge" type="button">Finish challenge</button>
     </script>
     <script src="jquery/dist/jquery.js"></script>
